# nyx-solver

./: CMakeLists.txt  LICENSE  README.md
core_src/: Function.h  Function.txx  Jacobian.h  Jacobian.txx  LevenbergMarquardt.h  LevenbergMarquardt.txx  NewtonRaphson.h  NewtonRaphson.txx  NumericalDiff.h  NumericalDiff.txx  Tools.h
test_src/: CommonFunctions.h  CommonJacobians.h  Function_test.cxx  Function_test.h  Jacobian_test.cxx  Jacobian_test.h  LevenbergMarquardt_test.cxx  LevenbergMarquardt_test.h  NewtonRaphson_test.cxx  NewtonRaphson_test.h  NumericalDiff_test.cxx  NumericalDiff_test.h  main_nyx_test.cxx  main_nyx_test.h
